:construction: Created header and footer

--- a/src/components/FeaturedMovie/styles.css
+++ b/src/components/FeaturedMovie/styles.css
@@ -17,6 +17,7 @@
     flex-direction: column;
     justify-content: center;
     padding-left: 2rem;
+    padding-bottom: 250px;
 }
 
 .featured--name {
