--- a/src/App.css
+++ b/src/App.css
@@ -10,3 +10,12 @@ body {
   font-family: 'Roboto', sans-serif;
   margin: 0;
 }
+
+.lista {
+  margin-top: -250px;
+}
+
+footer {
+  margin: 50px 0;
+  text-align: center;
+}
