--- a/src/components/FeaturedMovie/styles.css
+++ b/src/components/FeaturedMovie/styles.css
@@ -83,3 +83,27 @@
     font-size: 1.125rem;
     color: #999;
 }
+
+@media (max-width: 760px) {
+    .featured{
+        height: 90vh;
+    }
+    .featured--name{
+        font-size:40px;
+    }
+    .featured--info{
+        font-size:16px;        
+    }
+    .featured--description{
+        font-size:14px; 
+        max-width: 100%;
+        margin-right: 30px;    
+    }
+    .featured--mylistbutton,
+    .featured--watchbutton{
+        font-size:10px; 
+    }
+    .featured--genres{
+        font-size:14px;        
+    }
+}
